--- a/haskell-tetris.cabal
+++ b/haskell-tetris.cabal
@@ -19,6 +19,6 @@ executable haskell-tetris
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7, gloss==1.8.*, random==1.1, gloss-game==0.3.3.0
+  build-depends:       base >=4.6 && <4.7, gloss==1.8.*, random==1.1
   -- hs-source-dirs:      
   default-language:    Haskell2010
